package uqam.inf5153.game.actions;

import uqam.inf5153.game.Jeu;

public interface Action {

    public boolean executer(int numJoueur);
}
